--- a/2.html
+++ b/2.html
@@ -5,6 +5,22 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <style>
+    #active {
+      color: red;
+    }
+    .saw {
+      color: gray;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+    }
+    h1 {
+      font-size: 50px;
+      text-align: center;
+    }
+  </style>
 </head>
 
 <body>
